Bugfix
- start implementing proper observable lists in Orders Overview